adding missing import and handling directional graphs in routing

--- a/Problem_Solving_with_Search.ipynb
+++ b/Problem_Solving_with_Search.ipynb
@@ -16,8 +16,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9cmoCgZZZuVu",
-        "colab_type": "text"
+        "id": "9cmoCgZZZuVu"
       },
       "source": [
         "<H1> Problem Solving with Search</H1>"
@@ -26,8 +25,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "c48PpmCwaXBa",
-        "colab_type": "text"
+        "id": "c48PpmCwaXBa"
       },
       "source": [
         "# Some utility functions and imports"
@@ -36,11 +34,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9RMDRPQDkbp0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9RMDRPQDkbp0"
       },
       "source": [
+        "import sys\n",
         "import pandas as pd\n",
         "import json\n",
         "from collections import deque\n",
@@ -87,15 +84,13 @@
         "      insert(r[1],r[0],int(r[2]))\n",
         "  return G"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OjB3eqiEsxA8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OjB3eqiEsxA8"
       },
       "source": [
         "#There is no priority in Python which allows custom sorting function\n",
@@ -139,14 +134,13 @@
         "    def __repr__(self):\n",
         "      return str(self.heap)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sdaw6a_XakrA",
-        "colab_type": "text"
+        "id": "sdaw6a_XakrA"
       },
       "source": [
         "# Problem Formulation"
@@ -155,8 +149,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0iukdkSebRgU",
-        "colab_type": "text"
+        "id": "0iukdkSebRgU"
       },
       "source": [
         "## Sliding tile puzzle"
@@ -165,9 +158,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xSbYPoMcva7s",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xSbYPoMcva7s"
       },
       "source": [
         "class TilePuzzleProblem:\n",
@@ -208,15 +199,13 @@
         "  def state_str(self, s):\n",
         "    return '\\n'.join( [str( s[i*self.n:(i+1)*self.n]) for i in range(0,self.n)])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jPpYC6D1yW_i",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jPpYC6D1yW_i"
       },
       "source": [
         "s_start = (\n",
@@ -225,19 +214,18 @@
         "    6, 7, 8\n",
         ")\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KfXh-o6ryegS",
-        "colab_type": "code",
-        "outputId": "004a6b00-c454-4ce2-c6bb-859a7535ccf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        }
+        },
+        "outputId": "004a6b00-c454-4ce2-c6bb-859a7535ccf6"
       },
       "source": [
         "tp = TilePuzzleProblem(s_start,3)\n",
@@ -261,7 +249,7 @@
         "print(tp.state_str(s))\n",
         "print(f'is_goal? {tp.is_goal(s)}')\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,8 +283,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mHIfR6OyPiqM",
-        "colab_type": "text"
+        "id": "mHIfR6OyPiqM"
       },
       "source": [
         "## Routing problem"
@@ -305,9 +292,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ezC72SPNPoJ_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ezC72SPNPoJ_"
       },
       "source": [
         "class RoutingProblem:\n",
@@ -318,7 +303,7 @@
         "    self.G = G  \n",
         "  \n",
         "  def actions(self, s):\n",
-        "    return self.G[s].keys()\n",
+        "    return self.G[s].keys() if s in G else ()\n",
         "  \n",
         "  def succ(self, s, a):\n",
         "    if a in self.G[s]:\n",
@@ -337,19 +322,18 @@
         "  def __repr__(self):\n",
         "    return {'s_start':self.s_start, 'goal':self.goal, graph:'self.G'}"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YDkbmipqSsbT",
-        "colab_type": "code",
-        "outputId": "d0d7fa84-9386-47d7-ea43-b5bf3e4bfb3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 748
-        }
+        },
+        "outputId": "d0d7fa84-9386-47d7-ea43-b5bf3e4bfb3f"
       },
       "source": [
         "routes = \"\"\"\\\n",
@@ -369,7 +353,7 @@
         "print(json.dumps(G, indent=4, sort_keys=True))\n",
         "print(f\"\"\"The cost of traveling from Ashdod to Ashkelon is: {G['Ashdod']['Ashkelon']}\"\"\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,12 +410,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "z3vflQhESh_1",
-        "colab_type": "code",
-        "outputId": "3c48962f-4319-4788-95a7-0af9a71bb8a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 340
-        }
+        },
+        "outputId": "3c48962f-4319-4788-95a7-0af9a71bb8a6"
       },
       "source": [
         "s_start, goal = 'Yavne', 'Bar-Ilan University'\n",
@@ -462,7 +445,7 @@
         "print(rp.state_str(s))\n",
         "print(f'is_goal? {rp.is_goal(s)}')\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,12 +478,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xWOW8M2pWAn2",
-        "colab_type": "code",
-        "outputId": "dafe7263-0d15-454d-a8e4-e3ffcd3502e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "outputId": "dafe7263-0d15-454d-a8e4-e3ffcd3502e5"
       },
       "source": [
         "routes2 = \"\"\"\\\n",
@@ -518,7 +500,7 @@
         "print(f\"\"\"The cost of traveling from A to B is: {G2['A']['B']}\"\"\")\n",
         "G2"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,8 +533,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lC4bwaLtbev9",
-        "colab_type": "text"
+        "id": "lC4bwaLtbev9"
       },
       "source": [
         "# Definition of Node in a search graph"
@@ -561,9 +542,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wng7osQBSqlk",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wng7osQBSqlk"
       },
       "source": [
         "@total_ordering\n",
@@ -611,14 +590,13 @@
         "    def __hash__(self):\n",
         "        return hash(self.state)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QeQWsnFfby-J",
-        "colab_type": "text"
+        "id": "QeQWsnFfby-J"
       },
       "source": [
         "# Uninformed Search algorithms"
@@ -627,8 +605,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jjBD3mKiorzb",
-        "colab_type": "text"
+        "id": "jjBD3mKiorzb"
       },
       "source": [
         "## Implementation"
@@ -637,8 +614,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7AyDPdlFjDAh",
-        "colab_type": "text"
+        "id": "7AyDPdlFjDAh"
       },
       "source": [
         "### BFS"
@@ -647,9 +623,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D8wWG7IfjI-X",
-        "colab_type": "code",
-        "colab": {}
+        "id": "D8wWG7IfjI-X"
       },
       "source": [
         "def breadth_first_tree_search(problem):\n",
@@ -680,14 +654,13 @@
         "            frontier.append(child)\n",
         "  return None, log"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SZH3IoewjP_O",
-        "colab_type": "text"
+        "id": "SZH3IoewjP_O"
       },
       "source": [
         "### DFS"
@@ -696,9 +669,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C0ajyBINjSDe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "C0ajyBINjSDe"
       },
       "source": [
         "def depth_first_tree_search(problem):\n",
@@ -751,14 +722,13 @@
         "      return result, iterative_log\n",
         "  return None, iterative_deepening_search"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0rLgJ-PSjYig",
-        "colab_type": "text"
+        "id": "0rLgJ-PSjYig"
       },
       "source": [
         "### Uniform Cost search"
@@ -767,9 +737,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BcTGi7_Bsgwf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "BcTGi7_Bsgwf"
       },
       "source": [
         "\n",
@@ -802,14 +770,13 @@
         "    return node.path_cost\n",
         "  return best_first_graph_search(problem, f=g)  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7Zp5wS10qG1V",
-        "colab_type": "text"
+        "id": "7Zp5wS10qG1V"
       },
       "source": [
         "## Playing around"
@@ -818,9 +785,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tdJFzw8Yq5jD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tdJFzw8Yq5jD"
       },
       "source": [
         "s_start = (\n",
@@ -839,14 +804,13 @@
         "\n",
         "routing_problem = RoutingProblem('Yavne','Bar-Ilan University',G)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "44QhRsbtqUmG",
-        "colab_type": "text"
+        "id": "44QhRsbtqUmG"
       },
       "source": [
         "### BFS"
@@ -856,12 +820,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XEGk3e3DVbOt",
-        "colab_type": "code",
-        "outputId": "e8f4565e-ff66-4705-b627-4e6eb956f259",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 976
-        }
+        },
+        "outputId": "e8f4565e-ff66-4705-b627-4e6eb956f259"
       },
       "source": [
         "#solution, log = breadth_first_tree_search(tile_puzzle_problem)\n",
@@ -872,7 +835,7 @@
         "print(f'Solution: {solution}')\n",
         "format_search_log(log)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,12 +989,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "hMd9zQRuJBqK",
-        "colab_type": "code",
-        "outputId": "1c47643e-5130-4060-fb03-4d9ffda780cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 736
-        }
+        },
+        "outputId": "1c47643e-5130-4060-fb03-4d9ffda780cb"
       },
       "source": [
         "s_start = (\n",
@@ -1044,7 +1006,7 @@
         "print(f'Solution: {solution}')\n",
         "format_search_log(log, limit=10)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,8 +1127,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4LnQ-RZsssds",
-        "colab_type": "text"
+        "id": "4LnQ-RZsssds"
       },
       "source": [
         "### DFS"
@@ -1176,12 +1137,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xYULNrwksxnV",
-        "colab_type": "code",
-        "outputId": "46ae43b2-9144-41c1-9b0d-d8a0a14264eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 736
-        }
+        },
+        "outputId": "46ae43b2-9144-41c1-9b0d-d8a0a14264eb"
       },
       "source": [
         "#solution, log = depth_first_tree_search(tile_puzzle_problem)\n",
@@ -1192,7 +1152,7 @@
         "print(f'Solution: {solution}')\n",
         "format_search_log(log, limit=10)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1313,8 +1273,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0I-Qjqpcvrbd",
-        "colab_type": "text"
+        "id": "0I-Qjqpcvrbd"
       },
       "source": [
         "### Uniform Cost search"
@@ -1324,12 +1283,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "5Q8zSWRAvoxc",
-        "colab_type": "code",
-        "outputId": "8cb3a499-0672-422f-d280-7ec5b64d0d92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "8cb3a499-0672-422f-d280-7ec5b64d0d92"
       },
       "source": [
         "#solution, log = uniform_cost_search(tile_puzzle_problem)\n",
@@ -1337,7 +1295,7 @@
         "print(f'Solution: {solution}')\n",
         "format_search_with_costs_log(log)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,12 +1410,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YDVqIs3ee_c-",
-        "colab_type": "code",
-        "outputId": "d1933110-dac2-44c0-f228-e9d30aa6d173",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "outputId": "d1933110-dac2-44c0-f228-e9d30aa6d173"
       },
       "source": [
         "routing_problem2 = RoutingProblem('S','G',G2)\n",
@@ -1465,7 +1422,7 @@
         "print(f'Solution: {solution}')\n",
         "format_search_with_costs_log(log)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,17 +1547,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "EZqlmz8CZIU1",
-        "colab_type": "code",
-        "outputId": "56b1b821-8da0-416f-cc61-9058820d442d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "56b1b821-8da0-416f-cc61-9058820d442d"
       },
       "source": [
         "G2['S']"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1619,8 +1575,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZRcMCchZaPCW",
-        "colab_type": "text"
+        "id": "ZRcMCchZaPCW"
       },
       "source": [
         "# Informed Search algorithms"
@@ -1629,8 +1584,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8FFKxRGraT5X",
-        "colab_type": "text"
+        "id": "8FFKxRGraT5X"
       },
       "source": [
         "## Implementation"
@@ -1639,9 +1593,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "La6IyTAev80e",
-        "colab_type": "code",
-        "colab": {}
+        "id": "La6IyTAev80e"
       },
       "source": [
         "def greedy_best_first_graph_search(problem, h):\n",
@@ -1652,14 +1604,13 @@
         "    return node.path_cost\n",
         "  return best_first_graph_search(problem, f=lambda n: g(n)+h(n))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sPWY1m0TLvWc",
-        "colab_type": "text"
+        "id": "sPWY1m0TLvWc"
       },
       "source": [
         "## Playing around"
@@ -1668,9 +1619,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HInxDHH6Lwxw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HInxDHH6Lwxw"
       },
       "source": [
         "#h1: number of misplaced tiles (note that blank is not counted)\n",
@@ -1692,26 +1641,25 @@
         "      res+= abs(x-nx) + abs(y-ny)\n",
         "    return res"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Z5aa6RWbeQWK",
-        "colab_type": "code",
-        "outputId": "fb99847d-4226-408f-b0d5-eff89807094a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
-        }
+        },
+        "outputId": "fb99847d-4226-408f-b0d5-eff89807094a"
       },
       "source": [
         "solution, log = astar_search(tile_puzzle_problem, h=TilePuzzleMisplacedTiles(3).h)\n",
         "print(f'Solution: {solution}')\n",
         "format_search_with_costs_log(log)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1796,12 +1744,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "O1CA3Z1zSBE6",
-        "colab_type": "code",
-        "outputId": "f3036c67-088d-4ec0-e50e-61c7921d3415",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "f3036c67-088d-4ec0-e50e-61c7921d3415"
       },
       "source": [
         "hard_s_start = (7, 2, 4,\n",
@@ -1813,7 +1760,7 @@
         "n = Node(hard_s_start)\n",
         "print(f'Number of misplaced tiles: {h1(n)}. Manhattan Distance: {h2(n)}.')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1828,12 +1775,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "p_8j2V8Weqc6",
-        "colab_type": "code",
-        "outputId": "cd7ed768-ae99-4392-e028-24ab849532c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 801
-        }
+        },
+        "outputId": "cd7ed768-ae99-4392-e028-24ab849532c4"
       },
       "source": [
         "hard_tile_puzzle_problem = TilePuzzleProblem(hard_s_start, 3)\n",
@@ -1843,7 +1789,7 @@
         "print(f'Solution of length {len(solution)}: {solution}')\n",
         "format_search_with_costs_log(log,limit=10)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1991,14 +1937,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AQ0cKXSTMGSA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AQ0cKXSTMGSA"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
